--- a/Support/B - Country Survey Details/IDN/SAKERNAS/1. Introduction to QLFS.md
+++ b/Support/B - Country Survey Details/IDN/SAKERNAS/1. Introduction to QLFS.md
@@ -6,7 +6,9 @@ The National Labor Force Survey (or Survei Angkatan Kerja Nasional, SAKERNAS ) i
 
 ## What does the IDN SAKERNAS cover?
 
-The IDN SAKERNAS mainly covers information on demographic details, including age, sex, marital status, and location, education, and labour market activitiesover the previous 7 days. In some most recent years (i.e. 2016-2019), SAKERNAS has become more detailed and covers indiciduals' health conditions and social security status. Years used for harmonization are from 1989 to 2019 except that 1995 was dropped as SAKERNAS was not conducted in that year. There are apparent growths in number and dimension of the variables included in each year's survey over years. The years and sample size of SAKERNAS harmonized for GLD are: 
+The IDN SAKERNAS mainly covers information on demographic details, including age, sex, marital status, and location, education, and labour market activitiesover the previous 7 days. In some most recent years (i.e. 2016-2019), SAKERNAS has become more detailed and covers indiciduals' health conditions and social security status. Years used for harmonization are from 1989 to 2019 except that 1995 was dropped as SAKERNAS was not conducted in that year. We did not harmonize 1995 although Intercensal Population Survey 1995 can be used as a substitute for it. Since 2005, each year has two versions of SAKERNAS available for harmonization, Feburary round and August round. We used the one with the larger sample size, which usually would be the August round. Only 2005 has a larger sample size in its Feburary round. There are apparent growths in number and dimension of the variables included in each year's survey over years.
+
+The years and sample size of SAKERNAS harmonized for GLD are: 
 
 | Year	| # of Households	| # of Individuals	| Expanded Population	|
 | :------:	| :-------:		| :-------:	 	| :-------:	 	|
@@ -22,7 +24,7 @@ The IDN SAKERNAS mainly covers information on demographic details, including age
 | 1999  | 47,580        | 155,572        |  162,039,307     |
 | 2000  | 31,439        |  98,952        |  161,369,415     |
 | 2001  | 38,052        | 119,935        |  164,896,728     |
-| 2002  | N/A        | 275,342        |  212,540,647     |
+| 2002  | 70,176        | 275,342        |  212,540,647     |
 | 2003  | 76,085        | 232,466        |  170,856,677     |
 | 2004  | 75,557        | 209,480        |  153,948,922     |
 | 2005  | 68,645        | 215,775        |  177,423,583     |
@@ -41,7 +43,8 @@ The IDN SAKERNAS mainly covers information on demographic details, including age
 | 2018  | N/A        | 508,460        |  194,779,441     |
 | 2019  | N/A        | 782,789        |  197,911,777     |
 
-Note that even though SAKERNAS is a household-based survey and it indeed has household-related variables in some years, not every year's raw dataset provides complete location identification information for unique household ID generation. Therefore, numbers of households are not available (N/A) in the form above for those years without household IDs.  
+Note that even though SAKERNAS is a household-based survey and it indeed has household-related variables in some years, not every year's raw dataset provides complete location identification information for unique household ID generation. Therefore, numbers of households are not available (N/A) in the form above for those years without household IDs.
+
 
 ## Where can the data be found?
 
@@ -49,7 +52,8 @@ The microdata of SAKERNAS are not publicly available. The raw data we used were 
 
 ## What is the sampling procedure?
 
-SAKERNAS uses a two-stage cluster sampling method in general, which includes two steps: 1) selecting the main sampling unit – census blocks and 2) selecting the ultimate sampling unit – households within each main sampling unit. As the frequency of data collection and level of data representativeness have changed over time, the implementation of sample selection methods also changed. For example, year 2007 is a dividing line in that all years before 2007 can only produce representative estimates up to province level whereas all years after 2007 (in cluding 2007) have representativeness untill district level except for the August round of 2016. The exception of year 2016 is because of the reduction on its sample size, which was reduced from 200,000 households to 50,000 households. The knowledge product, *A Guide to Working with Indonesian Survey Data*,  written by the Poverty Global Practice of the World Bank Group outlines the sampling procedure as:
+SAKERNAS uses a two-stage cluster sampling method in general, which includes two steps: 1) selecting the main sampling unit – census blocks and 2) selecting the ultimate sampling unit – households within each main sampling unit. As the frequency of data collection and level of data representativeness have changed over time, the implementation of sample selection methods also changed. For example, year 2007 is a dividing line in that all years before 2007 can only produce representative estimates up to province level whereas all years after 2007 (in cluding 2007) have representativeness untill district level except for the August round of 2016. The exception of year 2016 is because of the reduction on its sample size, which was reduced from 200,000 households to 50,000 households. The knowledge product, *A Guide to Working with Indonesian Survey Data* (
+hereinafter referred to as *The Guide*),  written by the Poverty Global Practice of the World Bank Group outlines the sampling procedure as:
    
 ```
 Probability Proportional to Size method (PPS) is used when selecting census block from Master Sampling Frame (MSF) which contains the list of primary sampling units (PSU or wilcah/wilayah pencacahan). Sampling frame for the annual Sakernas was
@@ -96,9 +100,9 @@ systematic random sampling.
 
 The official reports detail results by gender, sector (urban and rural etc.), province, and district(or kab). Province is the first administrative level at which data from 1989 to 2006 are representative whereas district is the second level at which data from 2007 to 2019 are representative.
 
-Two things to be noted regarding geographic significance level:
+Quite a few historical changes happened to administrative divisions in Indonesia during the time period of interest considering the long duration. The provinces and districts in SAKERNAS do not necessarily reflect the real administrative divisions in the same year. One reason is because of the time lag – SAKERNAS might still used the old names and coding for provinces even though the system has been changed. Or on the contrary, SAKERNAS had acted before the change actually happened. The other reason is the lack of information about province names or inconsistent coding of divisions in some years. For our harmonization purpose, we used province names in the last harmonized year, 2019, as the standard version for all years' provinces; and year 2013 for all years' districts. For example, in SAKERNAS 1991 and 1993, there are only 24 unique province codes in the raw datasets and only 9 of 24 match the province codes in record of all time, which are noted as "*Unconventional province codes*" below. Another example is that 54-Timur Timor (or East Timor) became independent from Indonesia in 2002 but SAKERNAS excludes Timur Timor since 2000. 
 
-1) Historical changes to administrative divisions: the provinces and districts in SAKERNAS do not necessarily reflect the real administrative divisions in the same year. One reason is because of the time lag – SAKERNAS might still used the old names and coding for provinces even though the system has been changed. Or on the contrary, SAKERNAS had acted before the change actually happened. The other reason is the lack of information about province names or inconsistent coding of divisions in some years. For our harmonization purpose, we used province names in the last harmonized year, 2019, as the standard version for all years' provinces; and year 2013 for all years' districts. For example, in SAKERNAS 1991 and 1993, there are only 24 unique province codes in the raw datasets and only 9 of 24 match the province codes in record of all time. Another example is that 54-Timur Timor (or East Timor) became independent from Indonesia in 2002 but SAKERNAS excludes Timur Timor since 2000. 
+Here is a table listing all the 34 provinces in Indonesia since 2015 till now, using their current names and codes:
 
 |   Code   | Province | Year of Appearance | Reason for Exclusion |
 | :------: | :------: | :-------------: | :-----: | 
@@ -141,52 +145,35 @@ Two things to be noted regarding geographic significance level:
 | **94** | **PAPUA**         |  2003-2019              | Not incluided in the survey untill 2003                 | 
 
 
-4) South Africa has 9 provinces which are currently divided into 52 districts. The 52 districts are further categorized into two types --- 44 non-metropolitan and 8 large city areas called metros. In the survey, the way of grouping these metro and non-metro areas changes before and after 2014. See more details below in the *"*[Changes in sub-national level categorization](#Changes-in-sub-national-level-categorization)*"* section.
-
-2)  The original categorization of sector varies across years. Principally, the QLFS uses "Urban formal", "Urban informal", "Tribal areas", and "Farms and mining areas". But in no documentation does it clarify the categories in terms of urban/rural classification. See more details including the decision rule for harmonization below in the *"*[Coding of sector](#Coding-of-sector)*"* section.
-
 ## Other noteworthy aspects
 
 ### Unique Household ID Generation
 
-Sample sizes and expanded population (that is the total population estimated using the weights) are compared to the reported data in the publication "*Labour Market Dynamics in South Africa*" by the Statistics South Africa for all years. Reports can be found on DataFirst under "Reports" in the "DOCUMENTATION" section (i.e. 2019 quarter 1 can be found [here](https://www.datafirst.uct.ac.za/dataportal/index.php/catalog/764)). The expanded population estimated using raw data match exactly the numbers in reports of year 2010 to 2019 after rounding.
+Household IDs are not directly available in SAKERNAS regardless of year. Location identifiers such as province, district, sector (urban or rural) etc. can be used to generate household IDs. However, these location identifiers are necessarily fully available in all survey years. We created household IDs using STATA codes provided by the *The Guide* for years that have the full list of location identifiers required.
 
-The table below shows raw and processed sample sizes, numbers of dropped observations, reported population, and estimated population using raw and processed data. For year 2008 and 2009, the estimates and reported numbers are fairly close, 49,562 versus 49,374 in 2008 and 50,224 versus 50,044 in thousands. "*Labour Market Dynamics in South Africa, 2020*" changed its content and structure and does not state total population. Therefore, the expanded population estimate in 2020 is not comparable.
+![STATA_HHID_codes](https://user-images.githubusercontent.com/84488698/163726938-8dfafff8-f195-442f-bef7-6f3a9f9843f9.png)
 
-The fourth column "\# Drops" shows the number of dropped observations in each year. All of these observations were dropped during household head assignment process. The original variable `PERSONNO` has its first digit as 1 if the respondent is a household head. But some households do not have any member whose `PERSONNO` starts with 1. This may be because that the head did not present, or he/she did not spend four nights or more in the household.
+Household IDs were only created if 1) the given year has the full list of identifiers and 2) the number of households generated using this method matches the household sample size in *The Guide*. Because *The Guide* only provides a range of household sample size for several years in rounded number, it is possible that our self-created household number is not equal to the exact number of household in a specific year. The table below shows the availability of location identifiers in each year and if have hosehold ID.  
 
-The decision rule we created to assign household heads in cases where heads are absent are as follows:
+| Year	    | Location Identifiers Available	| HHID created? | 
+| :-------:	 | :------------------------------: | :-----------: | 
+| 1989       | province, district, sector, sample code number, household sample sequential number, serial number of households| No | 
+| 1990-1994  | province, district, sector, sample code number, household sample sequential number, serial number of households| Yes|  
+| 1996-2001  | province, district, sub-district, village, sector, sample code number, household sample sequential number| Yes |  
+| 2002       | province, district, sector, sample code number, household sample sequential number | Yes|  
+| 2003-2008  | province, district, sub-district, village, sector, sample code number, household sample sequential number| Yes |  
+| 2009       | province, district, sector, household sample sequential number| No| 
+| 2010       | 73,629                           | No        |  
+| 2011       | 65,648                           | No        | 
+| 2012       | 49,150                           | No        |  
+| 2013       | 47,580                           | No        |  
+| 2014       | 31,439                           | No        |  
+| 2015       | 38,052                           | No        |  
+| 2016       | N/A                              | No        | 
+| 2017       | 76,085                           | No        |   
+| 2018       | 75,557                           | No        |  
+| 2019       | 68,645                           | No        |  
 
-1.  assign the ***eldest male adult*** as the head;
-
-2.  absent male members, assign the ***eldest female adult*** as the head;
-
-3.  absent adult members, the household does not have any household head;
-
-4.  if there are multiple same-age same-gender members in a given household, no head will be assigned;
-
-5.  drop households that do not have heads;
-
-6.  individuals who are assigned to be heads should be heads regardless of waves, meaning he or she is the head for all four quarters in a given year.
-
-Consequently, the dropped observations shown in the table are all because there is no adult member or multiple same-age male (or female) members exist.
-
-
-|   Year   | Raw sample size | Processed sample size | # Drops | Reported population | Estimated population(raw data) | Estimated population (processed data) |
-| :------: | :-------------: | :-------------------: | :-----: | :-----------------: | :----------------------------: | :-----------------------------------: |
-| **2008** | 375,918         | 375,856               | 62      | 49,562,000          | 49,373,878                     | 49,365,385                            |
-| **2009** | 359,465         | 359,423               | 42      | 50,224,000          | 50,044,374                     | 50,040,072                            |
-| **2010** | 342,466         | 342,445               | 21      | 50,896,000          | 50,896,271                     | 50,894,161                            |
-| **2011** | 333,939         | 333,780               | 159     | 51,580,000          | 51,580,122                     | 51,562,353                            |
-| **2012** | 339,858         | 339,697               | 161     | 52,275,000          | 52,275,309                     | 52,249,700                            |
-| **2013** | 346,687         | 346,511               | 176     | 52,982,000          | 52,982,369                     | 52,956,174                            |
-| **2014** | 341,320         | 341,186               | 134     | 53,701,000          | 53,701,488                     | 53,688,613                            |
-| **2015** | 286,782         | 286,709               | 73      | 54,433,000          | 54,432,731                     | 54,420,645                            |
-| **2016** | 275,306         | 275,202               | 104     | 55,174,000          | 55,173,509                     | 55,154,645                            |
-| **2017** | 276,876         | 276,773               | 103     | 55,906,000          | 55,905,546                     | 55,891,484                            |
-| **2018** | 275,382         | 275,247               | 135     | 56,623,000          | 56,622,824                     | 56,600,492                            |
-| **2019** | 270,358         | 270,215               | 143     | 57,342,000          | 57,341,699                     | 57,314,175                            |
-| **2020** | 209,917         | 209,890               | 27      | N/A                 | 58,064,779                     | 58,060,431                            |
 
 ### Changes in sub-national level categorization
 
