--- a/Support/B - Country Survey Details/IDN/SAKERNAS/1. Introduction to SAKERNAS.md
+++ b/Support/B - Country Survey Details/IDN/SAKERNAS/1. Introduction to SAKERNAS.md
@@ -162,17 +162,8 @@ Household IDs were only created if 1) the given year has the full list of identi
 | 1996-2001  | province, district, sub-district, village, sector, sample code number, household sample sequential number| Yes |  
 | 2002       | province, district, sector, sample code number, household sample sequential number | Yes|  
 | 2003-2008  | province, district, sub-district, village, sector, sample code number, household sample sequential number| Yes |  
-| 2009       | province, district, sector, household sample sequential number| No| 
-| 2010       | 73,629                           | No        |  
-| 2011       | 65,648                           | No        | 
-| 2012       | 49,150                           | No        |  
-| 2013       | 47,580                           | No        |  
-| 2014       | 31,439                           | No        |  
-| 2015       | 38,052                           | No        |  
-| 2016       | N/A                              | No        | 
-| 2017       | 76,085                           | No        |   
-| 2018       | 75,557                           | No        |  
-| 2019       | 68,645                           | No        |  
+| 2009       | province, district, sector, household sample sequential number|No| 
+| 2010-2019  | province, district, sector| No| 
 
 
 ### Changes in sub-national level categorization
