--- a/Support/B - Country Survey Details/IDN/SAKERNAS/1. Introduction to SAKERNAS.md
+++ b/Support/B - Country Survey Details/IDN/SAKERNAS/1. Introduction to SAKERNAS.md
@@ -10,7 +10,7 @@ The IDN SAKERNAS mainly covers information on demographic details, including age
 
 The years and sample size of SAKERNAS harmonized for GLD are: 
 
-| Year	| # of Households	| # of Individuals	| Expanded Population	|
+| **Year**	| **# of Households**	| **# of Individuals**	| **Expanded Population**	|
 | :------:	| :-------:		| :-------:	 	| :-------:	 	|
 | 1989  | N/A        | 283,278        |  264,569,316     |
 | 1990  | 81,814        | 291,095        |  135,714,449     |
@@ -104,7 +104,7 @@ Quite a few historical changes happened to administrative divisions in Indonesia
 
 Here is a table listing all the 34 provinces in Indonesia since 2015 till now, using their current names and codes:
 
-|   Code   | Province | Year of Appearance | Reason for Exclusion |
+|   **Code**   | **Province** | **Year of Appearance** | **Reason for Exclusion** |
 | :------: | :------: | :-------------: | :-----: | 
 | **11** | **ACEH**         | 1989-2019               | -      | 
 | **12** | **SUMATERA UTARA**         |  1989-1990, 1992, 1994-2019            |    Unconventional province codes    |
@@ -155,7 +155,7 @@ Household IDs are not directly available in SAKERNAS regardless of year. Locatio
 
 Household IDs were only created if 1) the given year has the full list of identifiers and 2) the number of households generated using this method matches the household sample size in *The Guide*. Because *The Guide* only provides a range of household sample size for several years in rounded number, it is possible that our self-created household number is not equal to the exact number of household in a specific year. The table below shows the availability of location identifiers in each year and if have hosehold ID.  
 
-| Year	    | Location Identifiers Available	| HHID created? | 
+| **Year**	    | **Location Identifiers Available**	| **HHID created?** | 
 | :-------:	 | :------------------------------: | :-----------: | 
 | 1989       | province, district, sector, sample code number, household sample sequential number, serial number of households| No | 
 | 1990-1994  | province, district, sector, sample code number, household sample sequential number, serial number of households| Yes|  
@@ -166,35 +166,20 @@ Household IDs were only created if 1) the given year has the full list of identi
 | 2010-2019  | province, district, sector| No| 
 
 
-### Changes in sub-national level categorization
+### Definition of Labor Status and Labor Force Participation
 
-The original variable `metro_code` is used for the GLD variable `subnatid2` but the number of categories of this variable changes from 7 to 17 after 2014, meaning that it has 7 categories from 2008 to 2014 and 17 categories from 2015 to 2020.
+From 1989 to 2019, the structure of SAKERNAS, especially the labor force module has changed greatly. Not only does the number of labor-related questions increase, but also the logic as well as the order of questions change. Although our definition of the GLD variable `lstatus` and `potential_lf` never change, still, we needed find the most appropriate question or a set of questions in the suvey to define the two variables, which sometimes requires slight adaptation. In order to make sure that we understand the intention and the logic of the questions and kade adaptations correctly, we used labor force participation rate in the report from [International Labour Organization (ILO) microdata library](https://www.ilo.org/surveyLib/index.php/catalog/2094/related-materials) (this is an example of 2015) as a benchmark for years with adaptations. But only 2014-2017 has detailed employed population, unemployed population and non-labor force data from ILO. We also used [World Bank country]https://data.worldbank.org/indicator/SL.TLF.CACT.ZS?end=2020&locations=ID&start=2000 indicators as a general reference. Here are some brief explanations. More [are covered here in a separate document](/Support/B%20-%20Country%20Survey%20Details/IDN/SAKERNAS/Labor_Status_and_Labor_Force_Participation.md).    
 
-South Africa has 6 metro cities before 2011 and the country added 2 metros, *Buffalo City (East London)* and *Mangaung (Bloemfontein)*, in 2011. But this change in administrative structure does not appear immediately in the QLFS. There is a 4-year lag. From 2008 to 2014, the 7 items on `metro_code` list are 6 metros plus 1 group which combining all other non-metro areas together. Since 2015, 6 metros expand to 8, and additionally, the single "non-metro" group is split into 9 according to the provinces those non-metros belong to.
+All the harmonized years can be grouped into three categories: 
 
-| **\# Category** |    **2008-2014**     |       **2015-2020**        |
-|:---------------:|:--------------------:|:--------------------------:|
-|        1        |      Cape Town       |         Cape Town          |
-|        2        |      eThekweni       |         eThekweni          |
-|        3        |     eKhurhuleni      |        eKhurhuleni         |
-|        4        |     Johannesburg     |        Johannesburg        |
-|        5        | Nelson Mandela Metro |    Nelson Mandela Metro    |
-|        6        |       Tshwane        |          Tshwane           |
-|        7        |     *Non-Metro*      |       *Buffalo City*       |
-|        8        |          \-          |         *Mangaung*         |
-|        9        |          \-          | *Western Cape, Non-Metro*  |
-|       10        |          \-          | *Eastern Cape, Non-Metro*  |
-|       11        |          \-          | *Northern Cape, Non-Metro* |
-|       12        |          \-          |  *Free State, Non-Metro*   |
-|       13        |          \-          | *KwaZulu-Natal, Non-Metro* |
-|       14        |          \-          |  *North West, Non-Metro*   |
-|       15        |          \-          |    *Gauteng, Non-Metro*    |
-|       16        |          \-          |  *Mpumalanga, Non-Metro*   |
-|       17        |          \-          |    *Limpopo, Non-Metro*    |
+1) 1989-1999: the questionnaires of these years follow the same structure and have the same labor force module questions. Simply following the order of the questions can locate all the conditions needed to decide the employed, the unemployed, non-labor force population. 
+2) 2000-2016：the labor force module has become more complete and questions are more well-guided during this time period. The *Only for Working Household Members* block states clearly the requirements for people to answer this block, which is a clear clue to code employed people.
+3) 2017-2019: the last three years have the most up-to-date questionnaire structure, which adds details like work environment and welfare. But meanwhile as question block increases, the previous order was discarded and guide becomes blurred. Following the logic of the questionnaire would not produce sound labor force participation rate. We slightly changed the way we coded `lstatus` so as to get close to the ILO estimates.
 
-### Definition of Labor Status and Labor Force Participation 
+Another thing worth pointing out is that the age required for education and labor force modules changed between 2016 and 2017: 10 years old for years 1989-2016 whereas 5 for 2017-2019.        
 
-The original variable `Geo_type` in the QLFS is not an urban-or-rural binary variable. Moreover, it varies over years. As shown in the table below, from 2008 to 2015, `Geo_type` contains urban formal, urban informal, tribal areas, and rural formal. But since 2016, it has urban, traditional, and farm/mining areas.
+
+### Definition of Labor Status and Labor Force Participation
 
 We referred to the published statistics of urban population (% of total population) of South Africa from [World Bank Open Data](https://data.worldbank.org/indicator/SP.URB.TOTL.IN.ZS?end=2020&locations=ZA&start=2007) to decide the way of sector's harmonization. The original categories are re-grouped in such way that each year's result match World Bank's statistics correspondingly as close as possible.
 
@@ -221,17 +206,3 @@ We referred to the published statistics of urban population (% of total populati
 The QLFS of all years codes industry based on the [Standard Industrial Classification of All Economic Activities, Fifth Edition (SIC 5)](http://www.statssa.gov.za/additional_services/sic/contents.htm), which is based upon the third revision of the International Standard Industrial Classification of all Economic Activities (ISIC Rev. 3) published in 1990.
 
 Regarding occupational classification, all QLFS years code occupation based on [South African Standard Classification of Occupations published in 2003 (SASCO 2003)](http://www.statssa.gov.za/classifications/codelists/SASCO_2003.pdf), which is based on the United Nations' International Standard Classification of Occupations (ISCO-88). The details on the process of creating the correspondence between national and international classifications [are covered here in a separate document](/Support/B%20-%20Country%20Survey%20Details/ZAF/QLFS/Correspondence_National_International_Classifications.md).
-
-### Assembling annual data using QLFS and LMDSA
-
-The difference between LMDSA and QLFS is that the former compiles data collected in all QLFSs, that is four individual data sets representing four quarters, in a given year. All variables and observations remain the same in LMDSA except that the variable of weight is divided by four in LMDSA.
-
-All years except 2020 have both LMDSA and QLFS available on DataFirst, and therefore, we used LMDSA for harmonization because of its simplicity and QLFS for cross-checking purposes. For year 2020, the annual data set was assembled manually by appending four QLFS data sets and dividing `weight` by four.
-
-Year 2012 and 2016 need special attention. Using LMDSA alone for these two years are not enough because they both lose information to some degree. LMDSA 2012 does not contain `Q19ATTE` which is necessary for generating the GLD variable `school`. The solution is to append QLFSs in 2012 and extract `Q19ATTE` and merge it into LMDSA 2012. Similarly, LMDSA 2016 do not have complete information on `Geo_type`. This variable can be obtained from QLFS 2016 and brought into LMDSA 2016 to get the intermidiate dta file.  
-
-### Change in implementation
-
-Note that the QLFS since 2020 has switched from in-person interview to telephonic questionnaires. Therefore, the data are highly unlikely to be comparable to QLFS in previous years due to this change in how the information is collected and recorded.
-
-### 
