--- a/Support/B - Country Survey Details/IDN/SAKERNAS/1. Introduction to SAKERNAS.md
+++ b/Support/B - Country Survey Details/IDN/SAKERNAS/1. Introduction to SAKERNAS.md
@@ -168,7 +168,7 @@ Household IDs were only created if 1) the given year has the full list of identi
 
 ### Definition of Labor Status and Labor Force Participation
 
-From 1989 to 2019, the structure of SAKERNAS, especially the labor force module has changed greatly. Not only does the number of labor-related questions increase, but also the logic as well as the order of questions change. Although our definition of the GLD variable `lstatus` and `potential_lf` never change, still, we needed find the most appropriate question or a set of questions in the suvey to define the two variables, which sometimes requires slight adaptation. In order to make sure that we understand the intention and the logic of the questions and kade adaptations correctly, we used labor force participation rate in the report from [International Labour Organization (ILO) microdata library](https://www.ilo.org/surveyLib/index.php/catalog/2094/related-materials) (this is an example of 2015) as a benchmark for years with adaptations. But only 2014-2017 has detailed employed population, unemployed population and non-labor force data from ILO. We also used [World Bank country]https://data.worldbank.org/indicator/SL.TLF.CACT.ZS?end=2020&locations=ID&start=2000 indicators as a general reference. Here are some brief explanations. More [are covered here in a separate document](/Support/B%20-%20Country%20Survey%20Details/IDN/SAKERNAS/Labor_Status_and_Labor_Force_Participation.md).    
+From 1989 to 2019, the structure of SAKERNAS, especially the labor force module has changed greatly. Not only does the number of labor-related questions increase, but also the logic as well as the order of questions change. Although our definition of the GLD variable `lstatus` and `potential_lf` never change, still, we needed find the most appropriate question or a set of questions in the suvey to define the two variables, which sometimes requires slight adaptation. In order to make sure that we understand the intention and the logic of the questions and kade adaptations correctly, we used labor force participation rate in the report from [International Labour Organization (ILO) microdata library](https://www.ilo.org/surveyLib/index.php/catalog/2094/related-materials) (this is an example of 2015) as a benchmark for years with adaptations. But only 2014-2017 has detailed employed population, unemployed population and non-labor force data from ILO. We also used [World Bank country indicators](https://data.worldbank.org/indicator/SL.TLF.CACT.ZS?end=2020&locations=ID&start=2000) as a general reference. Here are some brief explanations. More [are covered here in a separate document](/Support/B%20-%20Country%20Survey%20Details/IDN/SAKERNAS/Labor_Status_and_Labor_Force_Participation.md).    
 
 All the harmonized years can be grouped into three categories: 
 
@@ -176,30 +176,8 @@ All the harmonized years can be grouped into three categories:
 2) 2000-2016：the labor force module has become more complete and questions are more well-guided during this time period. The *Only for Working Household Members* block states clearly the requirements for people to answer this block, which is a clear clue to code employed people.
 3) 2017-2019: the last three years have the most up-to-date questionnaire structure, which adds details like work environment and welfare. But meanwhile as question block increases, the previous order was discarded and guide becomes blurred. Following the logic of the questionnaire would not produce sound labor force participation rate. We slightly changed the way we coded `lstatus` so as to get close to the ILO estimates.
 
-Another thing worth pointing out is that the age required for education and labor force modules changed between 2016 and 2017: 10 years old for years 1989-2016 whereas 5 for 2017-2019.        
+Another thing worth pointing out is that the age required for education and labor force modules changed between 2016 and 2017: 10 years old for years 1989-2016 whereas it is 5 for 2017-2019.        
 
-
-### Definition of Labor Status and Labor Force Participation
-
-We referred to the published statistics of urban population (% of total population) of South Africa from [World Bank Open Data](https://data.worldbank.org/indicator/SP.URB.TOTL.IN.ZS?end=2020&locations=ZA&start=2007) to decide the way of sector's harmonization. The original categories are re-grouped in such way that each year's result match World Bank's statistics correspondingly as close as possible.
-
-|**Year**|                     **Original geo-type code**                    | **Re-categorization**         | 
-|:---:|:--------------------------------------------------------------------:|:-----------------------------:|
-|2008| 1=Urban formal 2=Urban informal   4=Tribal areas 5=Rural formal       |     (1 2)=urban (4 5)=rural   |
-|2009| 1=Urban formal 2=Urban informal   4=Tribal areas 5=Rural formal       |     (1 2)=urban (4 5)=rural   |
-|2010| 1=Urban formal 2=Urban informal   4=Tribal areas 5=Rural formal       |     (1 2)=urban (4 5)=rural   |
-|2011| 1=Urban formal 2=Urban informal   4=Tribal areas 5=Rural formal       |     (1 2)=urban (4 5)=rural   |
-|2012| 1=Urban formal 2=Urban informal   4=Tribal areas 5=Rural formal       |     (1 2)=urban (4 5)=rural   |
-|2013| 1=Urban formal 2=Urban informal   4=Tribal areas 5=Rural formal       |     (1 2)=urban (4 5)=rural   |
-|2014| 1=Urban formal 2=Urban informal   4=Tribal areas 5=Rural formal       |     (1 2)=urban (4 5)=rural   |
-|2015| 1=Urban formal 2=Urban informal   3=Tribal areas 4=Rural formal       |     1=urban (2 3 4)=rural     |
-|2016| 1=Urban 2=Traditional 3=Farms  4=Mining areas                         |     1=urban (2 3 4)=rural     |
-|2017| 1=Urban 2=Traditional 3=Farms/mining areas                            |     1=urban   (2 3)=rural     |
-|2018| 1=Urban 2=Traditional 3=Farms/mining areas                            |     1=urban   (2 3)=rural     |
-|2019| 1=Urban 2=Traditional 3=Farms/mining areas                            |     1=urban   (2 3)=rural     |
-|2020| 1=Urban 2=Traditional 3=Farms/mining areas                            |     1=urban   (2 3)=rural     |
-
-![Urbanization statistics of South Africa, 2008-2020.](utilities/ZAF_urbanization_WBopenData.png)
 
 ### Coding of industry and occupation codes
 
